<resources>
    <string name="app_name">TaskManager</string>

    <string name="et_password">Password</string>
    <string name="et_username">Username</string>
    <string name="button_login">Login</string>
    <string name="button_signUp">Sign Up</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_TODO">TODO</string>
    <string name="tab_DOING">DOING</string>
    <string name="tab_DONE">DONE</string>
    <string name="date_picker_title">Date of task:</string>
    <string name="time_picker_title">Time of task:</string>
    <string name="title">Title</string>
    <string name="add_title_task">Add title task</string>
    <string name="add_new_task">Add new task</string>
    <string name="edit_task">Edit task</string>
    <string name="description">Description</string>
    <string name="prompt_spinner">choose task state</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="delete_account">Delete Account</string>
    <string name="search_task">Search Task</string>
    <string name="logout_menu">Logout</string>
    <string name="task_share">
        The Title Task is %1$s, description is %2$s.This task on date %3$s, time %4$s and Task state is %5$s.
    </string>

    <string name="send_task">Send task share via</string>

    <string name="task_share_subject">TaskManager Share</string>
    <string name="see_all_task">See All Task</string>
    <string name="see_all_users">See all Users</string>
    <string-array name="array_state_spinner">
        <item>TODO</item>
        <item>DOING</item>
        <item>DONE</item>
    </string-array>

</resources>
