<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/search_menu_item"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        android:title="@string/search_task"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
    <item
        android:id="@+id/deleteAccount_menu_item"
        android:icon="@drawable/ic_trash"
        android:title="@string/delete_account"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/logOut_menu_item"
        android:icon="@drawable/ic_logout"
        app:showAsAction="always"
        android:title="@string/logout_menu" />
    <item
        android:id="@+id/admin_menu_item"
        android:icon="@drawable/ic_user_show"
        app:showAsAction="ifRoom"
        android:title="@string/see_all_users" />


</menu>