<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_signUp"
    android:background="@color/colorViolet1">

    <EditText
        android:id="@+id/etSignUP_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/et_username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etSignUP_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/et_password"
        android:inputType="numberPassword" />

    <Button
        android:id="@+id/button_SignUP_SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/button_signUp"
        android:layout_marginTop="10dp"
        android:textSize="12sp"
        android:background="@drawable/buttonback"/>

</LinearLayout>