<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_info_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditInfoTaskFragment">

    <Button
        android:id="@+id/button_editDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/button_editTimePicker"
        app:layout_constraintEnd_toStartOf="@+id/button_editTimePicker"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_editTimePicker"
        android:background="@drawable/backbutton"/>

    <Button
        android:id="@+id/button_editTimePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/button_editDatePicker"
        app:layout_constraintTop_toBottomOf="@+id/et_editDescription"
        android:background="@drawable/backbutton"/>

    <EditText
        android:id="@+id/et_editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_title_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titleEdit" />

    <EditText
        android:id="@+id/et_editDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:padding="30dp"
        app:layout_constraintTop_toBottomOf="@+id/et_editTitle"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/tv_titleEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_delete_item"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="16dp"
        android:text="Delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_editState" />

    <TextView
        android:id="@+id/tv_edit_item"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="Edit"
        android:layout_marginLeft="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_delete_item"
        app:layout_constraintEnd_toStartOf="@id/tv_save_item"
        app:layout_constraintStart_toEndOf="@+id/tv_delete_item"
        app:layout_constraintTop_toTopOf="@+id/tv_delete_item" />

    <TextView
        android:id="@+id/tv_save_item"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="Cancel"
        android:layout_marginLeft="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_delete_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_delete_item" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner_editState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:prompt="@string/prompt_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_editTimePicker">

    </androidx.appcompat.widget.AppCompatSpinner>

</androidx.constraintlayout.widget.ConstraintLayout>